refactor: add font specification for header-details link

--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
 }
 
 .header__details {
-  font-family: fantasy, cursive;
+  font-family: Papyrus, fantasy, cursive;
+  font-weight: 600;
 }
 
 @media (max-width:768px) {
