--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .header__details {
-  font-family: Papyrus, fantasy, cursive;
+  font-family: fantasy, cursive;
   font-weight: 600;
 }
 
@@ -80,7 +80,7 @@
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
+  padding: 40px 0 10px;
   margin: 0;
   text-transform: uppercase;
 }
@@ -133,7 +133,7 @@
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-  width: 226px;
+  width: 70%;
 }
 
 .todo__task-name-input {
@@ -164,7 +164,7 @@
 
 .todo__task-name-input_active {
   display: inline-block;
-  width: 224px;
+  width: 70%;
 }
 
 .todo__task-name_hidden {
