refactor: rename class name according to rule 3.1 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
 
 /* Completed */
 
-.todo__task-name_crossed-out {
+.todo__task-name_deleted {
   text-decoration: line-through;
   color: #888;
 }
